# micro-chimp

./: .dockerignore  .env  .gitignore  Cargo.toml  README-proto.md  build_docker.sh  build_docker_base.sh  clone_machine_config.sh  commands_verify.sh  create_machine.sh  curl.sh  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.play.yml  docker-compose.yml  docker.codegen.Dockerfile  docker.micro-chimp.Dockerfile  docker.postgres.Dockerfile  docker.rust.Dockerfile  init.sql  init_0.sql  init_1.sql  init_2.sql  justfile  micro-chimp-codegen.Dockerfile  micro-chimp-node-codegen.Dockerfile  micro-chimp-postgres.Dockerfile  micro-chimp-rust-builder.Dockerfile  micro-chimp-rust.Dockerfile  micro-chimp.Dockerfile  package-lock.json  package.json  postgres-build.Dockerfile  primer.db  schema.sql  scratch.rs  sites_manifest.yml  tsconfig-bin.json  tsconfig-lib.json  tsconfig.json  (+2 more)
actix_example/: db_pg.rs  db_pg_direct.rs  main_pg.rs  main_raw.rs  models.rs  utils.rs
chimp-test/: .env  docker-compose.yml  nginx.Dockerfile  postgres.Dockerfile
client/: main.ts
commands/: commands_new_email.sh  commands_unsubscribe.sh  create_unsubscribe.sh
docker/: Dockerfile-micro-chimp  build.rs  build.sh  clone_machine_config.sh  codegen.Dockerfile  codegen.js  complete.sh  create_machine.sh  create_secrets.sh  deploy.sh  destroy_machine.sh  docker-compose.yml  micro-chimp.Dockerfile  nginx.Dockerfile  nginx.secure.conf  nodecodegen.js  package-lock.json  postgres-codegen.js  postgres.Dockerfile  postgres.schema.sql  run.sh  rust-codegen.js  rust.Dockerfile  site_names.yml  (+3 more)
(+12 files in other folders)
