[package]
name = "micro-chimp"
version = "0.1.0"
authors = ["Blaine Hansen <faichenshing@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
derive-error = "0.0.3"

futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix = "0.7"
actix-web = { version="0.7", features=["ssl"] }
# tokio-postgres = "0.3"
tokio-postgres = "0.4.0-rc.2"
# postgres = "0.15"
# postgres-derive = "0.3"

lazy_static = "1"

validator_derive = "0.8"
validator = "0.8"

rand = "0.6"
base64 = "0.10"
