[package]
name = "micro-chimp"
version = "0.1.0"
authors = ["Blaine Hansen <faichenshing@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
bincode = "1"
validator = { version = "*", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
base64 = "*"
rand = "*"

# tokio = "0.2"

# serde_json = "1.0"

# log = "0.4"
# pretty_env_logger = "0.3"
# derive-error = "0.0.3"


# futures = "0.1"



